--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,7 @@
 
   /* FONTS */
 
-  --font-body: clamp(1.25rem, 0.25vw + 1rem, 1.5rem);
+  --font-body: clamp(1rem, 0.8852rem + 0.4898vw, 1.25rem);
   --font-button: clamp(0.875rem, 0.25vw + 1rem, 1.5rem);
   --font-h0: clamp(3rem, 0.5692rem + 8.238vw, 4rem);
   --font-h1: clamp(1.5rem, 0.5692rem + 2.238vw, 2.75rem);
@@ -185,7 +185,6 @@ a {
   background-color: transparent;
   padding: 0.75rem 1.25rem 0.75rem 1.25rem;
   color: #0a89ff;
-  width: auto;
   transition: all ease-in 300ms;
   width: fit-content;
 }
@@ -279,18 +278,6 @@ a {
   visibility: visible;
 }
 
-.secondaryButton {
-  border: 2px solid var(--globalWhite);
-  background: none;
-  color: var(--globalWhite);
-  transform: scale(100%);
-  transition: transform ease 300ms;
-}
-
-.secondaryButton:hover {
-  transform: scale(105%);
-}
-
 .primaryButton {
   background: #178eff;
   color: var(--globalWhite);
@@ -313,5 +300,16 @@ img {
   .roundButton {
     font-size: 1rem;
     padding: 1rem 1.5rem;
+  }
+  .buttonSecondary{
+    width: 100%;
+  }
+  .buttonPrimaryIcon{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+  }
+  .linkButton{
+    width: 100%;
   }
 }
